--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -152,29 +152,69 @@ leaflet(res) %>%
   addProviderTiles(providers$CartoDB.Positron) %>% 
   addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(txequi),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(75,60,68:74), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux équi/10 000 hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*structurant/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(75,60,68:74), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux structurant/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*gdsjeux/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(75,60,68:74), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux grands jeux/50 000hab") %>%
     addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*proxi/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(75,60,68:74), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux proxi/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(400000*bassins/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(75,60,68:74), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux bassins/400 000hab") %>%
 
   addMinicharts(centroid(res)[,1],centroid(res)[,2] ,
                        #maxValues = 100,
                        type = "pie",
-                       chartdata = res@data[,61:67],
+                       chartdata = res@data %>% select("bassins":"autres"),
                        colorPalette = coul,
                        width = sqrt(res$equ) ,
                        opacity = 0.6 ) %>%
@@ -392,29 +432,69 @@ leaflet(res) %>%
   addProviderTiles(providers$CartoDB.Positron) %>% 
   addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(txequi),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(77,62,70:76), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux équi/10 000 hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*structurant/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(77,62,70:76), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux structurant/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*gdsjeux/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(77,62,70:76), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux grands jeux/50 000hab") %>%
     addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*proxi/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(77,62,70:76), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux proxi/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(400000*bassins/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(77,62,70:76), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux bassins/400 000hab") %>%
 
   addMinicharts(centroid(res)[,1],centroid(res)[,2] ,
                        #maxValues = 100,
                        type = "pie",
-                       chartdata = res@data[,63:69],
+                       chartdata = res@data %>% select("bassins":"autres"),
                        colorPalette = coul,
                        width = sqrt(res$equ) ,
                        opacity = 0.6 ) %>%
@@ -541,29 +621,69 @@ leaflet(res) %>%
   addProviderTiles(providers$CartoDB.Positron) %>% 
   addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(txequi),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(74,59,67:73), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux équi/10 000 hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*structurant/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(74,59,67:73), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux structurant/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*gdsjeux/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(74,59,67:73), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux grands jeux/50 000hab") %>%
     addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*proxi/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(74,59,67:73), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux proxi/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(400000*bassins/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(74,59,67:73), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(NOM,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux bassins/400 000hab") %>%
 
   addMinicharts(centroid(res)[,1],centroid(res)[,2] ,
                        #maxValues = 100,
                        type = "pie",
-                       chartdata = res@data[,60:66],
+                       chartdata = res@data %>% select("bassins":"autres"),
                        colorPalette = coul,
                        width = sqrt(10*res$equ) ,
                        opacity = 0.7 ) %>%
@@ -685,29 +805,69 @@ leaflet(res) %>%
   addProviderTiles(providers$CartoDB.Positron) %>% 
   addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(txequi),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(71,56,64:70), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(LIBGEO,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux équi/10 000 hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*structurant/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(71,56,64:70), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(LIBGEO,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux structurant/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*gdsjeux/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(71,56,64:70), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(LIBGEO,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux grands jeux/50 000hab") %>%
     addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(50000*proxi/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(71,56,64:70), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(LIBGEO,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux proxi/50 000hab") %>%
    addPolygons(fill = TRUE, fillOpacity = 0.6, fillColor = ~pal(400000*bassins/pop.y),
               weight = 2, opacity = 0.6, color = "#2F4F4F",
-              popup = popupTable(res@data %>% select(71,56,64:70), feature.id=F,row.numbers = F),
+              popup = popupTable(res@data %>% 
+                                   select(LIBGEO,`nb équipements`=equ,Population=pop.y,
+                                          `Tx équipements`=txequi,
+                                          `Tx bassins`=txbassins,
+                                          `Tx grands jeux`=txgdsjeux,
+                                          `Tx structurant`=txstructurant,
+                                          `Tx tennis`=txtennis,
+                                          `Tx proximité`=txproxi),
+                                 feature.id=F,row.numbers = F),
               group = "taux bassins/400 000hab") %>%
 
   addMinicharts(centroid(res)[,1],centroid(res)[,2] ,
                        #maxValues = 100,
                        type = "pie",
-                       chartdata = res@data[,57:63],
+                       chartdata = res@data %>% select("bassins":"autres"),
                        colorPalette = coul,
                        width = sqrt(10*res$equ) ,
                        opacity = 0.7 ) %>%
