--- a/2.2_presco.Rmd
+++ b/2.2_presco.Rmd
@@ -37,10 +37,10 @@ Row {data-height="100"}
 
 ### Données générales sur les accueils des enfants d'âge préscolaire
 
-**12 200** places en accueil collectif en Bourgogne-Franche-Comté soit **15.2** places pour 100 enfants nés au cours des 3 dernières années.  
-**750** places en accueil familial.    
-**12.3%** des enfants de moins de ans sont scolarisés.  
-**16 100** assistantes maternelles et **1 300** gardes d'enfants à domicile.
+**`r prettyNum(round(ACM_PMI[1,3]/100,0)*100,big.mark = " ")`** places en accueil collectif en Bourgogne-Franche-Comté soit **`r prettyNum(round(ACM_PMI[8,3],1),decimal.mark = ",")` %** places pour 100 enfants nés au cours des 3 dernières années.  
+**`r prettyNum(round(ACM_PMI[9,3]/10,0)*10,big.mark = ",")`** places en accueil familial.    
+**`r prettyNum(round(ACM_PMI[10,3],1),decimal.mark = ",")` %** des enfants de moins de ans sont scolarisés.  
+**`r prettyNum(round(ACM_PMI[12,3]/100,0)*100,big.mark = " ")`** assistantes maternelles et **`r prettyNum(round(ACM_PMI[13,3]/100,0)*100,big.mark = ",")`** gardes d'enfants à domicile.
 
 
 Row {.tabset .tabset-fade .tabset-pills data-height="900"}
@@ -135,9 +135,9 @@ name="Taux de scolarisation des enfants de 2 ans",
 
 ### Carte
 ```{r}
-cartereg <- ACM_PMI %>% slice(8,10)%>% select(1:14) %>% pivot_longer(!...1,names_to = "REG") %>% pivot_wider(names_from = ...1,values_from = value) %>% rename("accueil"=2,"scolarisation"=3) %>% 
+cartereg <- ACM_PMI %>% slice(8,10)%>% dplyr::select(1:14) %>% pivot_longer(!...1,names_to = "REG") %>% pivot_wider(names_from = ...1,values_from = value) %>% rename("accueil"=2,"scolarisation"=3) %>% 
   mutate(accueil=round(accueil,1),scolarisation=round(scolarisation,1) ) %>%
-  mutate(INSEE_REG=regwgs@data %>% arrange((NOM_REG_M))%>% select(INSEE_REG) %>% pull() )
+  mutate(INSEE_REG=regwgs@data %>% arrange(LIBGEO) %>% dplyr::select(INSEE_REG) %>% pull() )
 
 cartereg <- merge(regwgs,cartereg,by="INSEE_REG")
 
@@ -146,12 +146,12 @@ leaflet(cartereg) %>%   addProviderTiles(providers$CartoDB.Positron) %>%
   addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5, opacity = 1) %>%
 addPolygons(weight=2,opacity = 0.9,color = "#2F4F4F", fillColor = ~pal(accueil),
               popup = popupTable(cartereg@data %>% 
-                                   select(Région=NOM_REG_M,pop,txaccueils=accueil),
+                                   select(Région=LIBGEO,pop,txaccueils=accueil),
                                   feature.id=F,row.numbers = F),
             group="taux d'accueils collectifs") %>% 
   addPolygons(weight=2,opacity = 0.9,color = "#2F4F4F", fillColor = ~pal(scolarisation),
               popup = popupTable(cartereg@data %>% 
-                                   select(Région=NOM_REG_M,pop,txscolarisation=scolarisation),
+                                   select(Région=LIBGEO,pop,txscolarisation=scolarisation),
                                   feature.id=F,row.numbers = F),
              group="taux de scolarisation") %>%   
   addLegend("bottomright", pal = pal, values = 0:100,   
@@ -175,7 +175,10 @@ Row {data-height="100"}
 
 ### Données générales sur les accueils des enfants d'âge préscolaire
 
-12 200 places en accueil collectif en Bourgogne-Franche-Comté 
+La Côte d'Or mieux dotée en accueil collectif que le niveau national.
+Des écarts importants dans la région : moins de 11 places pour 100 enfants en Haute-Saône.
+
+Dans la Nièvre et la Saône et Loire, les taux de scolarisation des enfants de 2 ans sont bien supérieurs à la moyenne nationale.
 
 Row {.tabset .tabset-fade .tabset-pills data-height="900"}
 -----------------------------------------------------------------------
@@ -286,7 +289,7 @@ hcaes(x=DEP,y=value), name="Taux de scolarisation des enfants de 2 ans",
 ### Carte
 ```{r}
 
-cartedep <- ACM_PMI_dep %>% slice(8,10)%>% select(1,3:10) %>% pivot_longer(!...1,names_to = "DEP") %>% pivot_wider(names_from = ...1,values_from = value) %>% rename("accueil"=2,"scolarisation"=3) %>%
+cartedep <- ACM_PMI_dep %>% slice(8,10)%>% dplyr::select(1,3:10) %>% pivot_longer(!...1,names_to = "DEP") %>% pivot_wider(names_from = ...1,values_from = value) %>% rename("accueil"=2,"scolarisation"=3) %>%
   mutate(accueil=round(accueil,1),scolarisation=round(scolarisation,1), INSEE_DEP=depbfc ) 
 
 
@@ -297,12 +300,12 @@ leaflet(cartedep) %>% addProviderTiles(providers$CartoDB.Positron) %>%
     addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5, opacity = 1) %>%
     addPolygons(weight=2,opacity = 0.8,color = "#2F4F4F", fillColor = ~pal(accueil),
               popup = popupTable(cartedep@data %>% 
-                                   select(Région=NOM_DEP_M,pop,txaccueils=accueil),
+                                   select(Région=LIBGEO,pop,txaccueils=accueil),
                                   feature.id=F,row.numbers = F),
              group="taux d'accueils collectifs" ) %>%
   addPolygons(weight=2,opacity = 0.8,color = "#2F4F4F", fillColor = ~pal(scolarisation),
               popup = popupTable(cartedep@data %>% 
-                                   select(Région=NOM_DEP_M,pop,txscolarisation=scolarisation),
+                                   select(Région=LIBGEO,pop,txscolarisation=scolarisation),
                                   feature.id=F,row.numbers = F),  
                    group="taux de scolarisation") %>%   
   addLegend("bottomright", pal = pal, values = 0:100,   
